[JONNYSONNY] Fixed layout bugs, added better colours, and other misc changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #ffffff;
+	background-image: linear-gradient(40deg, rgb(0 0 0) 60%, #C8A2C8);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -116,7 +116,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: #585858;
+		color: #c1c1c1;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -145,7 +145,7 @@ input, select, textarea {
 		-ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		text-decoration: none;
-		color: #585858;
+		color: #C8A2C8;
 		border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
 	}
 
@@ -2561,7 +2561,11 @@ input, select, textarea {
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
 		postiion: relative;
-		margin: -2.5em 0 0 -2.5em;
+		margin: 6.5em 0 0 0;
+		flex-direction: row;
+		align-content: center;
+		justify-content: center;
+		align-items: baseline;
 	}
 
 		.tiles article {
@@ -3172,7 +3176,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 0 ;
-		background-color: #f6f6f6;
+		background-color: #000000;
 	}
 
 		#footer > .inner {
@@ -3210,7 +3214,7 @@ input, select, textarea {
 				margin-top: 5em;
 				list-style: none;
 				font-size: 0.8em;
-				color: rgba(88, 88, 88, 0.5);
+				color: rgba(88, 88, 88, 1);
 			}
 
 				#footer > .inner .copyright a {
